# apple-health-mcp

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/apple_health_mcp/: __init__.py  server.py
tests/: conftest.py  test_ingest.py  test_tools.py
