[project]
name = "apple-health-mcp"
version = "0.1.0"
description = "MCP server that lets LLMs query your Apple Health export via SQL"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
keywords = ["mcp", "apple-health", "healthkit", "llm", "claude"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = ["mcp"]

[project.urls]
Homepage = "https://github.com/smarzola/apple-health-mcp"
Repository = "https://github.com/smarzola/apple-health-mcp"
Issues = "https://github.com/smarzola/apple-health-mcp/issues"

[project.scripts]
apple-health-mcp = "apple_health_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
