[project]
name = "apple-health-mcp"
version = "0.1.1"
description = "MCP server that lets LLMs query your Apple Health export via SQL"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
keywords = ["mcp", "apple-health", "healthkit", "llm", "claude"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = ["mcp"]

[dependency-groups]
dev = ["ruff>=0.11", "mypy>=1.15", "pytest>=8.0", "pre-commit>=4.0"]

[project.urls]
Homepage = "https://github.com/smarzola/apple-health-mcp"
Repository = "https://github.com/smarzola/apple-health-mcp"
Issues = "https://github.com/smarzola/apple-health-mcp/issues"

[project.scripts]
apple-health-mcp = "apple_health_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# --- Tool config ---------------------------------------------------------

[tool.ruff]
target-version = "py311"
line-length = 99

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["TCH"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["mcp.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
